--- a/小米商城/css/common.css
+++ b/小米商城/css/common.css
@@ -6,6 +6,10 @@ body {
     width: 1226px;
     margin: 0 auto;
 }
+.kl_wrapper {
+    width: 1100px;
+    margin: 0 auto;
+}
 .clear_fix::after {
     content: "";
     display: block;
